--- a/name game using ia/ia.html
+++ b/name game using ia/ia.html
@@ -89,4 +89,6 @@
     setInterval(updateBallPosition, 16); // Update ball position every 16ms
 
     document.addEventListener('mousemove', updatePaddlePosition);
-  </scri
+  </script>
+</body>
+</html>
